--- a/Sprint2/sprint2/pom.xml
+++ b/Sprint2/sprint2/pom.xml
@@ -18,6 +18,13 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+
     
 
         <dependency>
